--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     aaa
-    <script type="module" src="./dist/app.js" defer></script>
+    <script type="module" src="dist/app.js" defer></script>
 </body>
 </html>
