--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="./styls.css" />
     </head>
     <body>
-        <script type="module" src="dist/app.js" defer></script>
+        <script type="module" src="dist/app.js" ></script>
         <div id="root">
             <div
                 class="d-flex flex-column align-items-center justify-content-center vh-100 main-background"
