--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <link rel="stylesheet" href="./styls.css" />
     </head>
     <body>
-        <script type="module" src="dist/app.js" ></script>
-        <div id="root">
-            <div
+        <script type="module" src="dist/app.js"></script>
+        <div id="app">
+            <!-- <div
                 class="d-flex flex-column align-items-center justify-content-center vh-100 main-background"
             >
                 <div class="container">
@@ -46,7 +46,7 @@
                         </button>
                     </div>
                 </div>
-            </div>
-        </div>
+            </div> -->
+            
     </body>
 </html>
